netlifly link updated

--- a/index.html
+++ b/index.html
@@ -58,7 +58,11 @@
             on GitHub</a
           >
           and
-          <a href="#" target="_blank">hosted on Netlify</a>
+          <a
+            href="https://6672ed2f7ffbc4408ee238aa--jovial-sunburst-95ee85.netlify.app/"
+            target="_blank"
+            >hosted on Netlify</a
+          >
         </p>
       </footer>
     </div>
